--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -4,9 +4,20 @@ footer {
 
 .container__footer {
   display: flex;
-  padding-top: 60px;
   padding-bottom: 60px;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  & > div {
+    padding-top: 60px;
+  }
+
+  @media screen and (min-width: $bp-laptop) {
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: baseline;
+    text-align: left;
+  }
 }
 
 .address {
@@ -66,6 +77,7 @@ footer {
   outline: none;
   width: 358px;
   padding: 15px;
+  margin-bottom: 20px;
 
   &:focus-within {
     border: solid 1px getColor(brand-color);
