--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -1,25 +1,47 @@
 h1 {
   color: getColor('white');
-  font-size: 44px;
+  font-size: 26px;
   font-weight: 900;
   letter-spacing: 3px;
   line-height: 1.3;
   margin: 0;
   padding-bottom: 30px;
-  padding-top: 200px;
+  padding-top: 119px;
   text-align: center;
-}
 
+  @media screen and (min-width: $bp-tablet) and (max-width: $bp-laptop) {
+    font-size: 44px;
+    padding-top: 200px;
+  }
+}
+.list__wrap {
+  flex-direction: row;
+  display: flex;
+  flex-basis: calc((100% - 30px) / 2);
+  flex-wrap: wrap;
+  gap: 30px;
+  margin: 0;
+  justify-content: center;
+  @media screen and (min-width: $bp-tablet) {
+    flex-basis: calc((100% - 60px) / 3);
+  }
+  @media screen and (min-width: $bp-laptop) {
+    flex-wrap: nowrap;
+  }
+}
 .box__background-photo--big {
   background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url('../images/10.jpg');
-  height: 600px;
+  height: 400px;
   text-align: center;
+  @media screen and (min-width: $bp-tablet) and (max-width: $bp-laptop) {
+    height: 600px;
+  }
 }
 
 .background--light-gray {
   background: getColor(background-light-gray);
-  padding-bottom: 1px;
+  padding-bottom: 30px;
 }
 
 .title {
@@ -33,7 +55,10 @@ h1 {
     margin: 0 0 20px 0;
   }
   &--padding-top {
-    padding-top: 94px;
+    padding-top: 60px;
+    @media screen and (min-width: $bp-laptop) {
+      padding-top: 94px;
+    }
   }
 }
 
@@ -42,19 +67,57 @@ h1 {
   font-weight: 700;
   line-height: 1;
   margin: 0;
-  padding-bottom: 50px;
+  padding-bottom: 30px;
   text-align: center;
+  @media screen and (min-width: $bp-laptop) {
+    font-size: getFont(container__title--laptop);
+    padding-bottom: 50px;
+  }
 }
-
+.container__desktop--visible {
+  display: none;
+  @media screen and (min-width: $bp-laptop) {
+    display: block;
+  }
+}
 .list__icons--big {
-  flex-basis: calc((1170px - 90px) / 4);
   gap: 30px;
+  padding-left: 0;
+  @media screen and (min-width: $bp-mobile) and (max-width: $bp-laptop) {
+    display: flex;
+    flex-wrap: wrap;
+    width: 40vw;
+    flex-basis: calc((768px - 30px) / 2);
+  }
+  @media screen and (min-width: $bp-laptop) {
+    flex-basis: calc((1170px - 90px) / 4);
+  }
+
+  & > li > .title {
+    text-align: center;
+    @media screen and (min-width: $bp-mobile) and (max-width: $bp-laptop) {
+      text-align: left;
+    }
+  }
 }
 
 .icon--big {
-  width: 270px;
-  height: 120px;
+  width: 100%;
+  margin-top: 30px;
+  margin-bottom: 30px;
+  @media screen and (min-width: $bp-mobile) and (max-width: $bp-tablet) {
+    width: fit-content;
+  }
+
+  @media screen and (min-width: $bp-laptop) {
+    margin-top: 0;
+    margin-bottom: 0;
+    width: 270px;
+    height: 120px;
+  }
+
   background-color: getColor(background-light-gray);
+  display: block;
 }
 
 .icon-description {
@@ -67,8 +130,19 @@ h1 {
   border-radius: $border-radius-normal;
   border: 1px solid #afb1b8;
   fill: #afb1b8;
-  height: 92px;
-  width: 170px;
+  width: 40vw;
+
+  @media screen and (min-width: $bp-tablet) and (max-width: $bp-laptop) {
+    flex-basis: calc((768px - 60px) / 3);
+    gap: 30px;
+    flex-wrap: wrap;
+    width: 45vw;
+  }
+
+  @media screen and (min-width: $bp-laptop) {
+    height: 92px;
+    width: 170px;
+  }
 
   &:hover,
   &:focus {
@@ -104,24 +178,45 @@ h1 {
   box-shadow: rgba(0, 0, 0, 0.25) 0px 4px 4px 0px;
   text-align: center;
   margin: 0;
+  @media screen and (min-width: $bp-mobile) and (max-width: $bp-laptop) {
+    display: flex;
+    flex-wrap: wrap;
+    width: 45vw;
+  }
+  @media screen and (min-width: $bp-laptop) {
+    width: 270px;
+  }
 
   &__icons {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     padding-top: 16px;
-    width: 206px;
+    @media screen and (min-width: $bp-laptop) {
+      width: 206px;
+    }
   }
   &__description {
     color: getColor(secondary-color);
     display: inline-block;
     line-height: 1.1;
-    padding: 10px;
+    padding-top: 10px;
   }
   & > img {
     border-top-right-radius: $border-radius-normal;
     border-top-left-radius: $border-radius-normal;
+    width: 100%;
+    margin-bottom: 30px;
   }
   & > figcaption {
-    padding: 30px 30px 18px 30px;
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 24px;
+    @media screen and (min-width: $bp-laptop) {
+      padding-bottom: 30px;
+    }
+    @media screen and (min-width: $bp-tablet) {
+      flex-direction: column;
+      width: 100%;
+    }
   }
 }
