--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -21,10 +21,8 @@ h1 {
   flex-wrap: wrap;
   gap: 30px;
   margin: 0;
-  justify-content: center;
-  @media screen and (min-width: $bp-tablet) {
-    flex-basis: calc((100% - 60px) / 3);
-  }
+  justify-content: space-between;
+
   @media screen and (min-width: $bp-laptop) {
     flex-wrap: nowrap;
   }
@@ -83,14 +81,14 @@ h1 {
 .list__icons--big {
   gap: 30px;
   padding-left: 0;
-  @media screen and (min-width: $bp-mobile) and (max-width: $bp-laptop) {
-    display: flex;
-    flex-wrap: wrap;
-    width: 40vw;
-    flex-basis: calc((768px - 30px) / 2);
-  }
   @media screen and (min-width: $bp-laptop) {
     flex-basis: calc((1170px - 90px) / 4);
+  }
+  & > li {
+    @media screen and (min-width: $bp-tablet) and (max-width: $bp-laptop) {
+      width: 47%;
+      gap: 30px;
+    }
   }
 
   & > li > .title {
@@ -105,9 +103,6 @@ h1 {
   width: 100%;
   margin-top: 30px;
   margin-bottom: 30px;
-  @media screen and (min-width: $bp-mobile) and (max-width: $bp-tablet) {
-    width: fit-content;
-  }
 
   @media screen and (min-width: $bp-laptop) {
     margin-top: 0;
@@ -125,18 +120,23 @@ h1 {
   line-height: 1.7;
   margin: 0;
 }
-
+.list__companies {
+  & > li {
+    @media screen and (min-width: $bp-tablet) and (max-width: $bp-laptop) {
+      width: 30%;
+      gap: 30px;
+    }
+  }
+}
 .icon-company {
   border-radius: $border-radius-normal;
   border: 1px solid #afb1b8;
   fill: #afb1b8;
-  width: 40vw;
+  width: 40%;
 
   @media screen and (min-width: $bp-tablet) and (max-width: $bp-laptop) {
-    flex-basis: calc((768px - 60px) / 3);
+    width: 100%;
     gap: 30px;
-    flex-wrap: wrap;
-    width: 45vw;
   }
 
   @media screen and (min-width: $bp-laptop) {
