--- a/sass/components/_global-styles.scss
+++ b/sass/components/_global-styles.scss
@@ -36,11 +36,11 @@ li {
     padding-left: 0;
 
     @media screen and (min-width: $bp-laptop) {
+      display: flex;
       flex-direction: row;
       justify-content: space-between;
-      width: 100%;
-      margin-left: 0;
-      margin-right: 0;
+      width: 1170px;
+      margin: 94px;
     }
   }
 }
