--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -17,7 +17,6 @@ h1 {
 .list__wrap {
   flex-direction: row;
   display: flex;
-  flex-basis: calc((100% - 30px) / 2);
   flex-wrap: wrap;
   gap: 30px;
   margin: 0;
@@ -75,7 +74,7 @@ h1 {
 .container__desktop--visible {
   display: none;
   @media screen and (min-width: $bp-laptop) {
-    display: block;
+    display: inline-block;
   }
 }
 .list__icons--big {
@@ -122,9 +121,9 @@ h1 {
 }
 .list__companies {
   & > li {
+    width: 45%;
     @media screen and (min-width: $bp-tablet) and (max-width: $bp-laptop) {
       width: 30%;
-      gap: 30px;
     }
   }
 }
@@ -132,12 +131,7 @@ h1 {
   border-radius: $border-radius-normal;
   border: 1px solid #afb1b8;
   fill: #afb1b8;
-  width: 40%;
-
-  @media screen and (min-width: $bp-tablet) and (max-width: $bp-laptop) {
-    width: 100%;
-    gap: 30px;
-  }
+  width: 100%;
 
   @media screen and (min-width: $bp-laptop) {
     height: 92px;
