--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,8 @@
 @import 'utils/vars';
 @import 'components/global-styles';
-@import 'components/modal-window';
-@import 'components/footer';
 @import 'components/header';
+@import 'components/modal-window';
+@import 'components/mobile-menu';
+@import 'components/footer';
 @import 'components/portfolio';
 @import 'components/main-page';
