--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -82,14 +82,20 @@ footer {
   bottom: 4px;
   color: rgba(255, 255, 255, 0.6);
   height: 50px;
-  margin-right: 12px;
+
   outline: none;
-  width: 358px;
+  width: 90vw;
   padding: 15px;
   margin-bottom: 20px;
   display: block;
+  @media screen and (min-width: $bp-tablet) and (max-width: $bp-laptop) {
+    width: 450px;
+  }
   @media screen and (min-width: $bp-laptop) {
     display: inline-block;
+    width: 358px;
+    padding: 0;
+    margin-right: 12px;
   }
 
   &:focus-within {
