--- a/sass/components/_global-styles.scss
+++ b/sass/components/_global-styles.scss
@@ -9,7 +9,6 @@ body {
 
   @media screen and (min-width: $bp-laptop) {
     width: 100%;
-    margin: 94px auto;
   }
 }
 
@@ -19,13 +18,15 @@ svg {
 a,
 address {
   text-decoration: none;
+  font-style: normal;
 }
 li {
   list-style: none;
 }
 .container {
-  width: 100vw;
   margin-top: 60px;
+  margin-left: 15px;
+  margin-right: 15px;
   @media screen and (min-width: $bp-laptop) {
     margin: 94px auto;
     width: 1170px;
@@ -33,13 +34,12 @@ li {
 
   & > ul {
     padding-left: 0;
-    @media screen and (max-width: $bp-laptop) {
-      margin-left: 3vw;
-      margin-right: 3vw;
-    }
     @media screen and (min-width: $bp-laptop) {
       display: flex;
       flex-direction: row;
+      justify-content: space-evenly;
+    }
+    @media screen and (min-width: $bp-laptop) {
       justify-content: space-between;
     }
   }
@@ -53,7 +53,6 @@ li {
   font-weight: $font-bold;
   height: 50px;
   line-height: 30px;
-  position: relative;
   width: 200px;
   margin: 0 auto;
   box-shadow: 0px 4px 4px 0px rgba(47, 48, 58, 0.25);
