add first picture

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -104,6 +104,7 @@ header {
   }
   @media screen and (min-width: $bp-laptop) {
     display: flex;
+    flex-direction: row;
     & > div {
       display: inline-block;
     }
