--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -29,16 +29,11 @@ h1 {
 .box__background-photo--big {
   margin: 0 auto;
   background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
-  background-size: cover;
   background-position: center;
   text-align: center;
   width: 100%;
   height: 100%;
-  position: relative;
-  @media screen and (min-width: $bp-laptop) {
-    max-width: 1600px;
-    height: 600px;
-  }
+  position: absolute;
 }
 
 .background--light-gray {
