--- a/sass/components/_global-styles.scss
+++ b/sass/components/_global-styles.scss
@@ -37,7 +37,7 @@ li {
     @media screen and (min-width: $bp-laptop) {
       display: flex;
       flex-direction: row;
-      justify-content: space-evenly;
+      /*justify-content: space-evenly;*/
     }
     @media screen and (min-width: $bp-laptop) {
       justify-content: space-between;
