--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -22,9 +22,6 @@ h1 {
     gap: 30px;
     margin-left: 0;
   }
-  @media screen and (min-width: $bp-laptop) {
-    justify-content: space-between;
-  }
 }
 .box__background-photo--big {
   margin: 0 auto;
@@ -144,13 +141,10 @@ h1 {
   margin: 0;
 }
 .list__companies {
-  & > li {
-    width: 100%;
-    @media screen and (min-width: $bp-tablet) and (max-width: $bp-laptop) {
-      width: 30.5%;
-    }
-    @media screen and (min-width: $bp-laptop) {
-      width: 1170px;
+  & > li > a > svg {
+    @media screen and (min-width: $bp-tablet) {
+      width: calc((100% - 10%) / 3);
+      gap: 30px;
     }
   }
 }
@@ -158,8 +152,6 @@ h1 {
   border-radius: $border-radius-normal;
   border: 1px solid #afb1b8;
   fill: #afb1b8;
-  width: 100%;
-  display: block;
   @media screen and (min-width: $bp-laptop) {
     height: 92px;
     width: 170px;
