--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -32,6 +32,7 @@ h1 {
   background-size: cover;
   background-repeat: no-repeat;
   text-align: center;
+  background-position: center;
 
   @media screen and (min-device-pixel-ratio: 2) and (max-width: $bp-tablet),
     screen and (min-resolution: 192dpi),
@@ -43,6 +44,7 @@ h1 {
   @media screen and (min-width: $bp-tablet) {
     background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
       url('../../images/Header-800x400.jpg');
+    background-position: initial;
   }
 
   @media screen and (min-device-pixel-ratio: 2) and (min-width: $bp-tablet),
