--- a/sass/components/_global-styles.scss
+++ b/sass/components/_global-styles.scss
@@ -25,8 +25,8 @@ li {
 }
 .container {
   margin-top: 60px;
-  margin-left: 15px;
-  margin-right: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
   @media screen and (min-width: $bp-laptop) {
     margin: 94px auto;
     width: 1170px;
