--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -26,7 +26,7 @@ h1 {
 .box__background-photo--big {
   margin: 0 auto;
   background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('../images/header-mobile-480x400.jpg');
+    url('./images/header-mobile-480x400.jpg');
   width: 100%;
   height: 400px;
   background-size: cover;
@@ -38,19 +38,19 @@ h1 {
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../images/header-mobile-960x800@2x.jpg');
+      url('./images/header-mobile-960x800@2x.jpg');
   }
 
   @media screen and (min-width: $bp-tablet) {
     background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../images/header-800x400.jpg');
+      url('./images/header-800x400.jpg');
   }
 
   @media screen and (min-device-pixel-ratio: 2) and (min-width: $bp-tablet),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('../images/header-1600x800@2x.jpg');
+      url('./images/header-1600x800@2x.jpg');
   }
 
   @media screen and (min-width: $bp-laptop) {
