--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -26,7 +26,7 @@ h1 {
 .box__background-photo--big {
   margin: 0 auto;
   background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url('./images/header-mobile-480x400.jpg');
+    url('../images/header-mobile.jpg');
   width: 100%;
   height: 400px;
   background-size: cover;
@@ -34,37 +34,36 @@ h1 {
   text-align: center;
   background-position: center;
 
-  @media screen and (min-width: 480px) and (max-width: 1200px) {
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
     background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('./images/header-tablet-753x400.jpg');
+      url('../images/header-mobile@2x.jpg');
   }
 
-  @media screen and (min-width: 1201px) {
+  @media screen and (min-width: $bp-tablet) {
     background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('./images/header-800x400.jpg');
+      url('../images/header-tablet.jpg');
+
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../images/header-tablet@2x.jpg');
+    }
+  }
+
+  @media screen and (min-width: $bp-laptop) {
+    background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url('../images/header.jpg');
     max-width: 1600px;
     height: 600px;
-  }
-
-  @media screen and (min-device-pixel-ratio: 2) and (max-width: 768px),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('./images/header-mobile-960x800@2x.jpg');
-  }
-
-  @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px) and (max-width: 1200px),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('./images/header-tablet-1506x800@2x.jpg');
-  }
-
-  @media screen and (min-device-pixel-ratio: 2) and (min-width: 1201px),
-    screen and (min-resolution: 192dpi),
-    screen and (min-resolution: 2dppx) {
-    background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url('./images/header-1600x800@2x.jpg');
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(to left, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+        url('../images/header@2x.jpg');
+    }
   }
 }
 
