--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -97,12 +97,11 @@ header {
 }
 .box__contact {
   display: none;
-  @media screen and (min-width: $bp-tablet) and (max-width: $bp-laptop) {
+  @media screen and (min-width: $bp-tablet) {
     display: flex;
     flex-direction: column;
   }
   @media screen and (min-width: $bp-laptop) {
-    display: flex;
     flex-direction: row;
     & > div {
       display: inline-block;
