change size of icon-company

--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -171,7 +171,7 @@ h1 {
   fill: #afb1b8;
   width: 92vw;
   @media screen and (min-width: $bp-tablet) {
-    width: 226px;
+    width: 29vw;
   }
   @media screen and (min-width: $bp-laptop) {
     height: 92px;
