--- a/sass/components/_main-page.scss
+++ b/sass/components/_main-page.scss
@@ -117,7 +117,6 @@ h1 {
   }
 }
 .list__icons--big {
-  gap: 30px;
   padding-left: 0;
   margin: 0;
 
@@ -126,8 +125,14 @@ h1 {
   }
 
   & > li {
-    @media screen and (min-width: $bp-tablet) and (max-width: $bp-laptop) {
-      width: 354px;
+    @media screen and (min-width: $bp-tablet) {
+      flex-basis: calc((100% - 30px) / 2);
+    }
+  }
+
+  & > li {
+    @media screen and (min-width: $bp-laptop) {
+      flex-basis: calc((100% - 90px) / 4);
     }
   }
 
@@ -163,20 +168,30 @@ h1 {
 
 .list__companies {
   justify-content: space-between;
+  display: flex;
+
+  & > li {
+    width: 100%;
+  }
+
+  & > li {
+    @media screen and (min-width: $bp-tablet) {
+      flex-basis: calc((100% - 60px) / 3);
+    }
+  }
+
+  & > li {
+    @media screen and (min-width: $bp-laptop) {
+      flex-basis: calc((100% - 150px) / 6);
+    }
+  }
 }
 
 .icon-company {
   border-radius: $border-radius-normal;
   border: 1px solid #afb1b8;
   fill: #afb1b8;
-  width: 92vw;
-  @media screen and (min-width: $bp-tablet) {
-    width: 29vw;
-  }
-  @media screen and (min-width: $bp-laptop) {
-    height: 92px;
-    width: 170px;
-  }
+  width: 100%;
 
   &:hover,
   &:focus {
